Page MenuHome GnuPG

Kleopatra: Crash when revoking self signature
Closed, ResolvedPublic

Description

Prio high, because it is a reproducible crash. And crashes should always get higher prio.

To reproduce this it is very simple.

  1. export GNUPGHOME=$(mktemp -d)
  2. Run kleopatra and gererate a key
  3. Select revoke certification.

It is already viewable that the keyselectioncombo at the top is empty. If you still confirm you get a crash:

gpg_revsig (flags=0, userid=0x7fffc4002640 "Andre Heinecke <andre.heinecke@intevation.de>", signing_key=0x0, 
    key=<optimized out>, engine=0x7fffc40023a0) at ../../../src/gpgme/src/engine-gpg.c:3308
3308        err = add_arg (gpg, signing_key->fpr);

Related Objects

Event Timeline

aheinecke created this task.

Related to this is that I was looking for a way to revoke my own key and I thought that revoking the selfsig might work. So maybe it makes sense not to fix this by forbidding this operation but instead by allowing it with the same key.

ikloecker moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.Feb 24 2022, 3:02 PM
ikloecker changed the task status from Open to Testing.Feb 24 2022, 4:42 PM
ikloecker removed ikloecker as the assignee of this task.
ikloecker moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.
ikloecker added a subscriber: ikloecker.
ebo claimed this task.
ebo moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.Apr 5 2023, 1:53 PM