Prevent crash when revoking certifications without certification key

Do not start a job for revoking signatures if no certification key
or no user IDs were selected. And prevent a nullptr-dereference if
the job creation failed for some reason.

GnuPG-bug-id: 5858